src/test/deca/syntax/valid/created/cast/same_type_CLASS.deca
// Description:
//    Cast dans deux types identiques
// Resultat:
//  OK

class A {}

{
    A a = new A();
    A b = (A)(a);
}